[tool.poetry]
name = "canvas-grade-correlation"
version = "0.1.0"
description = ""
authors = ["Jelle Maas <typiqally@gmail.com>", "Neal Geilen <nealgeilen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
